src/test/deca/context/invalid/created/acces_field/acces_sur_float.deca
// Description :
//    acces à un field sur une variable float (qui n'est pas une classe)
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 :(3.65) Le membre gauche n’est pas de type ‘classe’

{
float b = 3;
b.x;
}